Added persistency and basic functionality. Code is little mess :D.

--- a/bin/index.html
+++ b/bin/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-        <title>Servidor Simple para Servicios Telem&acute;ticos</title>
+        <title>Servidor Simple para Servicios Telem&aacute;ticos</title>
 </head>
 <body bgcolor="lightgray">
-    <h1>Esta es una pagina de prueba</h1>
+    <h1>Esta es una p&aacute;gina de prueba</h1>
 
     <img src="logo-um.jpg">
-    <p>Es un ejemplo simple pero funcional</p>
+    <p>Es un ejemplo simple pero funcional, como Scala.</p>
     
     <form method="POST" action="/accion_form.html">
     Correo electr&oacute;nico:<br>
